@@ -1,6 +1,7 @@
   - Fix _concrete_methods_of returning non-CODE entries
   - fix broken implementation of method conflict resolution
     (Perlmonks#1041015)
+  - add is_role method for checking if a given package is a role
 
 1.002005 - 2013-02-01
   - complain loudly if Class::Method::Modifiers is too old (and skip tests)
